Update Bai1, Bai2

--- a/TH1/Bai1/index.html
+++ b/TH1/Bai1/index.html
@@ -86,5 +86,6 @@
                 <td></td>
             </tr>
         </table>
+        <p>Đào Công Tính - B1709632 - Sáng 5</p>
     </body>
 </html>
