--- a/TH1/Bai3/index.html
+++ b/TH1/Bai3/index.html
@@ -37,8 +37,8 @@
             <div class="profile">
                 <table border="1">
                     <tr>
-                        <td><a href="./TH1/Bai1">Bài 1</a></td>
-                        <td><a href="./TH1/Bai2">Bài 2</a></td>
+                        <td><a href="https://fb.me/dcongtinh">Bài 1</a></td>
+                        <td><a href="https://fb.me/dcongtinh">Bài 2</a></td>
                     </tr>
                 </table>
             </div>
