Thuc hanh buoi 2 CSS

--- a/index.html
+++ b/index.html
@@ -62,9 +62,18 @@
                             </ul>
                         </td>
                         <td>
-                            <p>Bài thực hành HTML</p>
-                            <a href="./TH1/Bai1">Bài 1</a>
-                            <a href="./TH1/Bai2">Bài 2</a>
+                            <p>Bài thực hành</p>
+                            <ul>
+                                Buổi 1 (HTML):
+                                <li><a href="./TH1/Bai1">Bài 1</a></li>
+                                <li><a href="./TH1/Bai2">Bài 2</a></li>
+                            </ul>
+                            <ul>
+                                Buổi 2 (CSS):
+                                <li><a href="./TH1/Bai1">Bài 1</a></li>
+                                <li><a href="./TH2/Bai2/div.html">Bài 2</a></li>
+                                <li><a href="./TH2/Bai3">Bài 3</a></li>
+                            </ul>
                         </td>
                     </tr>
                     <tr>
