Buoi3: PHP&MySQL

--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                                 <li><a href="./TH2/Bai2/div.html">Bài 2</a></li>
                                 <li><a href="./TH2/Bai3">Bài 3</a></li>
                             </ul>
+                            <ul>
+                                Buổi 3 (PHP&MySQL):
+                                <li><a href="./TH3">Trang chủ</a></li>
+                            </ul>
                         </td>
                     </tr>
                     <tr>
