--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
                                 Buổi 3 (PHP&MySQL):
                                 <li><a href="./TH3">Trang chủ</a></li>
                             </ul>
+                            <ul>
+                                Buổi 4 (Javascript):
+                                <li><a href="./TH3">Trang chủ</a></li>
+                                <li><a href="./TH4/Bai2">Slide show</a></li>
+                                <li><a href="./TH4/Bai3">Quảng cáo</a></li>
+                            </ul>
                         </td>
                     </tr>
                     <tr>
