--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
                                 <li><a href="./TH4/Bai2">Slide show</a></li>
                                 <li><a href="./TH4/Bai3">Quảng cáo</a></li>
                             </ul>
+                            <ul>
+                                Buổi 5 (AJAX):
+                                <li><a href="./TH3/Register">Bài 1</a></li>
+                                <li><a href="./TH3/List_Product_Buoi5">Bài 2, 3, 4</a></li>
+                            </ul>
                         </td>
                     </tr>
                     <tr>
