--- a/grocery-shoppy/checkout.html
+++ b/grocery-shoppy/checkout.html
@@ -1325,8 +1325,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						"<td class='invert' colspan='4'>TOTAL</td>"+
 						"<td class='invert total total-discount'>$"+totalDiscount.toFixed(2)+"</td>"+
 						"<td class='invert total total-amount'>$"+totalAmount.toFixed(2)+"</td>"+
-						"<td class='invert total item-total'>$"+total.toFixed(2)+"</td>"+
-						"<td class='invert'></td>"+
+						"<td class='invert total item-total' style='font-weight: bold'>$"+total.toFixed(2)+"</td>"+
+						"<td class='invert'><i class='fa fa-check icon-check'></i></td>"+
 					"</tr>"
 			document.getElementById('body-checkout').innerHTML = raws
 			document.getElementById('product-qty').innerHTML = items.length + " Product(s)"
