--- a/grocery-shoppy/checkout.html
+++ b/grocery-shoppy/checkout.html
@@ -1276,34 +1276,34 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			let {quantity, amount, discount_amount, item_name, item_image} = item._data
 			discount_amount = parseInt(discount_amount)
 			
-			return "<tr class='rem"+index+"'>"+
-						"<td class='invert'>"+(index+1)+"</td>"+
-						"<td class='invert-image'>"+
-							"<a href='single2.html'>"+
-								"<img src='"+item_image+"' alt=' ' class='img-responsive'>"+
-							"</a>"+
-						"</td>"+
-						"<td class='invert'>"+item_name+"</td>"+
-						"<td class='invert'>"+
-							"<div class='quantity'>"+
-								"<div class='quantity-select'>"+
-									"<div class='entry value-minus' onclick='qtyChange("+index+", -1)'>&nbsp;</div>"+
-									"<div class='entry value'>"+
-										"<span class='item-quantity'>"+quantity+"</span>"+
-									"</div>"+
-									"<div class='entry value-plus active' onclick='qtyChange("+index+", 1)'>&nbsp;</div>"+
-								"</div>"+
-							"</div>"+
-						"</td>"+
-						"<td class='invert item-discount'>$"+(discount_amount*quantity).toFixed(2)+"</td>"+
-						"<td class='invert item-amount'>$"+amount.toFixed(2)+"</td>"+
-						"<td class='invert item-price'>$"+((amount-discount_amount)*quantity).toFixed(2)+"</td>"+
-						"<td class='invert'>"+
-							"<div class='rem'>"+
-								"<span class='icon-close glyphicon glyphicon-remove-circle' aria-hidden='true' onclick='removeItem("+index+")'></span>"+
-							"</div>"+
-						"</td>"+
-					"</tr>"
+			return `<tr class="rem${index}">
+						<td class="invert">${index+1}</td>
+						<td class="invert-image">
+							<a href="single2.html">
+								<img src="${item_image}" alt=" " class="img-responsive">
+							</a>
+						</td>
+						<td class="invert">${item_name}</td>
+						<td class="invert">
+							<div class="quantity">
+								<div class="quantity-select">
+									<div class="entry value-minus" onclick="qtyChange(${index}, -1)">&nbsp;</div>
+									<div class="entry value">
+										<span class="item-quantity">${quantity}</span>
+									</div>
+									<div class="entry value-plus active" onclick="qtyChange(${index}, 1)">&nbsp;</div>
+								</div>
+							</div>
+						</td>
+						<td class="invert item-discount">$${(discount_amount*quantity).toFixed(2)}</td>
+						<td class="invert item-amount">$${amount.toFixed(2)}</td>
+						<td class="invert item-price">$${((amount-discount_amount)*quantity).toFixed(2)}</td>
+						<td class="invert">
+							<div class="rem">
+								<span class="icon-close glyphicon glyphicon-remove-circle" aria-hidden="true" onclick="removeItem(${index})"></span>
+							</div>
+						</td>
+					</tr>`
 		}
 
 		function renderTable(){
@@ -1314,22 +1314,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				window.location.href = "./index.html"
 			}
 			items.forEach((item, index) => {
-				console.log(item)
+				// console.log(item)
 				let {quantity, amount, discount_amount} = item._data
 				totalDiscount += discount_amount * quantity
 				totalAmount += amount * quantity
 				raws += transformRaw(item, index)
 			})
 			total = totalAmount - totalDiscount
-			raws += "<tr class='rem-total'>"+
-						"<td class='invert' colspan='4'>TOTAL</td>"+
-						"<td class='invert total total-discount'>$"+totalDiscount.toFixed(2)+"</td>"+
-						"<td class='invert total total-amount'>$"+totalAmount.toFixed(2)+"</td>"+
-						"<td class='invert total item-total' style='font-weight: bold'>$"+total.toFixed(2)+"</td>"+
-						"<td class='invert'><i class='fa fa-check icon-check'></i></td>"+
-					"</tr>"
-			document.getElementById('body-checkout').innerHTML = raws
-			document.getElementById('product-qty').innerHTML = items.length + " Product(s)"
+			raws += `<tr class="rem-total">
+						<td class="invert" colspan="4">TOTAL</td>
+						<td class="invert total total-discount">$${totalDiscount.toFixed(2)}</td>
+						<td class="invert total total-amount">$${totalAmount.toFixed(2)}</td>
+						<td class="invert total item-total" style="font-weight: bold">$${total.toFixed(2)}</td>
+						<td class="invert"><i class="fa fa-check icon-check"></i></td>
+					</tr>`
+			document.getElementById("body-checkout").innerHTML = raws
+			document.getElementById("product-qty").innerHTML = items.length + " Product(s)"
 		}
 
 		function qtyChange(index, value){
