--- a/grocery-shoppy/checkout.html
+++ b/grocery-shoppy/checkout.html
@@ -1287,11 +1287,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<td class="invert">
 							<div class="quantity">
 								<div class="quantity-select">
-									<div class="entry value-minus" onclick="qtyChange(${index}, -1)">&nbsp;</div>
+								<div class="entry value-minus active" onclick="qtyChange(${index}, -1)">
+										<i class="fa fa-minus"></i>
+									</div>
 									<div class="entry value">
 										<span class="item-quantity">${quantity}</span>
 									</div>
-									<div class="entry value-plus active" onclick="qtyChange(${index}, 1)">&nbsp;</div>
+									<div class="entry value-plus active" onclick="qtyChange(${index}, 1)">
+										<i class="fa fa-plus"></i>
+									</div>
 								</div>
 							</div>
 						</td>
